--- a/index.html
+++ b/index.html
@@ -40,6 +40,27 @@
                     <label for="bio">Biography:</label>
                     <textarea id="bio" name="user_bio"></textarea>
 
+                    <label for="job">Job role:</label>
+                    <select name="user_job" id="job">
+                        <optgroup label="Web">
+                            <option value="frontend_developer">Front-End Developer</option>
+                            <option value="php_developer">PHP Developer</option>
+                            <option value="python_developer">Python Developer</option>
+                            <option value="rails_developer">rails Developer</option>
+                            <option value="web_designer_developer">Web Designer</option>
+                            <option value="wordpress_developer">Wordpress Developer</option>
+                        </optgroup>
+                            <optgroup label="Mobile">
+                            <option value="android_developer">Android Developer</option>
+                            <option value="ios_developer">IOS Developer</option>
+                            <option value="mobile_developer">Mobile Developer</option>
+                        </optgroup>
+                        <optgroup label="Business">
+                            <option value="business_owner">Business Owner</option>
+                            <option value="freelancer">Freelancer</option>
+                        </optgroup>
+                        
+                    </select>
         </fieldset>
 
 
