--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="user_password">
 
+                <label>Age:</label>
+                <input type="radio" id="under_13" value="under_13" name="user_age">
+                <label for="under_13" class="light">under_13</label>
+
+                <br>
+
+                <input type="radio" id="over_13" value="over_13" name="user_age">
+                <label for="over_13" class="light">13 or Older</label>
+
+                <!-- if you have different name for each user_age ,you can select multiple radio button -->
+
+
+
+
+
         </fieldset>
 
 
@@ -61,6 +76,25 @@
                         </optgroup>
                         
                     </select>
+
+
+                    <label for="">Interests:</label>
+                    <input type="checkbox" id="development" value="interest_development" name="user_interest">
+                    <label for="development" class="light">Development</label>
+                    <br>
+
+                    <input type="checkbox" id="design" value="interest_design" name="user_interest">
+                    <label for="design" class="light">Design</label>
+                    <br>
+
+
+                    <input type="checkbox" id="business" value="interest_business" name="user_interest">
+                    <label for="business" class="light">Business</label>
+                    
+
+
+
+
         </fieldset>
 
 
